[project]
name = "engram-mcp-sdk"
version = "0.1.0"
description = "FastMCP tools that augment any MCP server with Engram memory (learn / recall) gated on a one-time World ID verification."
authors = [
    { name = "Engram" },
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "respx>=0.21",
]

[project.scripts]
engram-mcp-sdk = "engram_mcp_sdk.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
